--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,13 +19,12 @@
         tools:showIn="@layout/activity_main"
         android:id="@+id/image">
 
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="250dp"
             android:id="@+id/imageView"
             android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
+            android:scaleType="center"
             />
 
         <TextView
@@ -36,6 +35,7 @@
             android:layout_below="@+id/imageView"
             android:layout_centerHorizontal="true"
             android:textStyle="bold"
+
             />
 
         <TextView
