--- a/app/src/main/res/layout/content_brew.xml
+++ b/app/src/main/res/layout/content_brew.xml
@@ -8,6 +8,10 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/card_view"
             android:layout_width="match_parent"
@@ -20,7 +24,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -65,4 +69,5 @@
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
+    </FrameLayout>
 </ScrollView>
