--- a/app/src/main/res/layout/content_brew.xml
+++ b/app/src/main/res/layout/content_brew.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        <!--android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
+            android:layout_marginRight="8dp"-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="300dp"
                     android:layout_alignParentTop="true"
                     android:scaleType="centerCrop"
                     />
@@ -42,10 +42,10 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text=""
+                    android:text="TITLE ..."
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="22dp" />
+                    android:textSize="22dp"
+                    />
 
                 <TextView
                     android:id="@+id/textview_info"
@@ -54,6 +54,7 @@
                     android:layout_below="@+id/textview_title"
                     android:padding="8dp"
                     android:textColor="@color/black"
+                    android:text="info ..."
                     android:textSize="16dp"
                     android:textAlignment="gravity"/>
 
@@ -68,6 +69,6 @@
                 </com.google.android.gms.ads.AdView>
 
             </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <!--/android.support.v7.widget.CardView-->
     </FrameLayout>
 </ScrollView>
