--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,12 @@
     <include layout="@layout/content_main" />
 
     <!--android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_set"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" /-->
+        android:layout_margin="@dimen/fab_set_margin"
+        android:src="@android:drawable/ic_menu_set_as" /-->
+
 
 </android.support.design.widget.CoordinatorLayout>
