--- a/app/src/main/res/layout/content_brew.xml
+++ b/app/src/main/res/layout/content_brew.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -17,32 +18,77 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="300dp"
+                    android:layout_height="fill_parent"
                     android:id="@+id/imageView"
-                    android:layout_alignParentTop="true"
+                    android:adjustViewBounds="true"
                      />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_title"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_below="@+id/card_view_image"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text=""
                     android:maxLines="3"
                     android:id="@+id/textview_title"
-                    android:layout_below="@+id/imageView"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textSize="22dp"/>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_info"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/card_view_title"
+                    android:layout_margin="5dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text=""
                     android:id="@+id/textview_info"
                     android:layout_below="@+id/textview_title"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="gravity"
+                    android:textSize="16dp"/>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_button_save"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/card_view_info">
 
                 <com.dd.morphingbutton.MorphingButton
                     android:id="@+id/button_save"
@@ -50,11 +96,23 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:text="Save Image"
-                    android:layout_below="@+id/textview_info"
                     android:layout_centerHorizontal="true"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     />
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_button_set"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/card_view_button_save">
 
                 <com.dd.morphingbutton.MorphingButton
                     android:id="@+id/button_set"
@@ -64,10 +122,10 @@
                     android:text="Set as wallpaper"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:paddingBottom="20dp"
-                    android:layout_below="@+id/button_save"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="22dp" />
+                     />
+
+                </android.support.v7.widget.CardView>
 
                 <com.google.android.gms.ads.AdView
                     android:id="@+id/adView"
@@ -75,7 +133,7 @@
                     android:layout_height="wrap_content"
                     ads:adSize="BANNER"
                     ads:adUnitId="@string/admob_ad_unit_id"
-                    android:layout_below="@+id/button_set"
+                    android:layout_below="@+id/card_view_button_set"
                     android:paddingTop="10dp"/>
 
             </RelativeLayout>
