--- a/app/src/main/res/layout/content_brew.xml
+++ b/app/src/main/res/layout/content_brew.xml
@@ -42,7 +42,8 @@
                     android:layout_margin="5dp"
                     android:layout_below="@+id/card_view_image"
                     card_view:cardCornerRadius="2dp"
-                    card_view:contentPadding="10dp">
+                    card_view:contentPadding="10dp"
+                    android:background="@color/grey">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -65,7 +66,8 @@
                     android:layout_below="@+id/card_view_title"
                     android:layout_margin="5dp"
                     card_view:cardCornerRadius="2dp"
-                    card_view:contentPadding="10dp">
+                    card_view:contentPadding="10dp"
+                    android:background="@color/grey">
 
                 <TextView
                     android:layout_width="wrap_content"
